--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     padding: 0.5rem 0;
 }
+.navbar-toggler-icon {
+  filter: invert(100%); /* invierte el color */
+}
 
 .navbar-brand {
     color: var(--light-color) !important;
@@ -211,4 +214,6 @@ footer {
     .footer-social h5 {
         font-size: 1.1rem;
     }
+    
+
 }
